Ticket #14949 (closed build error: fixed)

Opened 5 months ago

Last modified 4 months ago

patch to built wxWidget 2.9.4 with x86_64_mingw cross compiler

Reported by: schloegl Owned by:
Priority: normal Milestone:
Component: wxMSW Version: 2.9.4
Keywords: Cc:
Blocked By: Patch: yes
Blocking:

Description

When trying to built wxWidgets 2.9.4 with the mingw cross-compiler for 64bit windows target, a compiler error occurs. The following patch solves that problem.

--- ./src/msw/textctrl.cpp	2013-01-02 21:47:03.000000000 +0100
+++ ./src/msw/textctrl.cpp	2013-01-02 21:46:53.000000000 +0100
@@ -992,7 +992,7 @@
 
     EDITSTREAM eds;
     wxZeroMemory(eds);
-    eds.dwCookie = (DWORD)&data;
+    eds.dwCookie = (DWORD_PTR)&data;
     eds.pfnCallback = wxRichEditStreamOut;
 
     ::SendMessage

Attachments

wxwidgets-1-fixes.patch download (330 bytes) - added by schloegl 5 months ago.
patch to fix built with x86_64_mingw cross-compiler

Change History

Changed 5 months ago by schloegl

patch to fix built with x86_64_mingw cross-compiler

Changed 4 months ago by VZ

  • status changed from new to closed
  • resolution set to fixed

(In [73395]) 64 bit compilation fix for wxTextCtrl in wxMSW.

Use DWORD_PTR instead of DWORD for a pointer.

This was already done for another occurrence of the same cast in r58564 but
somehow this one fell through the cracks.

Close #14949.

Note: See TracTickets for help on using tickets.