64 bit compilation fix for wxTextCtrl in wxMSW.

Use DWORD_PTR instead of DWORD for a pointer.

This was already done for another occurrence of the same cast in r58564 but
somehow this one fell through the cracks.

Close #14949.

git-svn-id: https://svn.wxwidgets.org/svn/wx/wxWidgets/trunk@73395 c3d73ce0-8a6f-49c7-b76d-6d57e0e08775